--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "url": "https://github.com/serverless-dna/effe/issues"
   },
   "homepage": "https://github.com/serverless-dna/effe#readme",
-  "types": "dist/index.d.ts",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
@@ -45,6 +44,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-tsdoc": "^0.3.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
@@ -54,6 +54,7 @@
     "rollup-plugin-node-polyfills": "^0.2.1",
     "semantic-release": "^24.2.0",
     "ts-jest": "^29.2.5",
+    "typedoc": "^0.26.11",
     "typescript": "^5.6.3"
   },
   "optionalDependencies": {
