--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "prebuild": "rimraf dist/* && npm run lint",
-    "build": "npx rollup -c:w",
+    "build": "npx rollup -c",
     "test": "npx jest",
     "lint": "npx eslint --fix",
     "postversion": "npm run build",
@@ -34,9 +34,10 @@
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.1",
+    "@rollup/plugin-type`script": "^12.1.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/github": "^11.0.1",
+    "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
     "eslint": "^9.14.0",
@@ -59,5 +60,9 @@
   },
   "optionalDependencies": {
     "@types/jest": "^29.5.14"
+  },
+  "dependencies": {
+    "isomorphic-ws": "^5.0.0",
+    "ws": "^8.18.0"
   }
 }
