ignore files in the trigger pipeline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,8 +3,14 @@ name: Stage Build
 on:
   push:
     branches:
-      - main
-      - "feature/*"
+      - "*"
+    paths-ignore:
+      - '*.md'
+  pull_request:
+    branches:
+      - "*"
+    paths-ignore:
+      - '*.md'
 
 jobs:
   StageBuild:
